@@ -1,3 +1,6 @@
+* NEXT
+- Hats are now rendered for the last word of links in org-mode.
+
 * 0.2.2 [2024-09-04 Wed]
 - Fix rendering bug pertaining to the raise display property.
 - Decrease required Emacs version to 26.1.
